# kreuzberg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  Taskfile.yml  composer.json  deny.toml  mkdocs.yaml  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: benchmarks.yaml  ci-java.yaml  ci-rust.yaml  ci-validate.yaml  ci.yaml  docs.yaml  profiling.yaml  publish.yaml  test-build.yaml
.task/languages/: node.yml  rust.yml
.task/tools/: docs.yml
benchmarks/src/: cli.py
benchmarks/tests/: cli_test.py  profiler_test.py  serialization_test.py
crates/kreuzberg/: Cargo.toml  README.md
crates/kreuzberg-cli/: Cargo.toml
crates/kreuzberg-docling-layout/: Cargo.toml
crates/kreuzberg-docling-layout/src/: error.rs  lib.rs  preprocessing.rs  types.rs
crates/kreuzberg-docling-layout/src/models/: detectron2.rs  mod.rs  rtdetr.rs  yolo.rs
crates/kreuzberg-docling-layout/src/postprocessing/: heuristics.rs  nms.rs
crates/kreuzberg-docling-layout/tests/: evaluation.rs
crates/kreuzberg-ffi/: Cargo.toml  kreuzberg.h
crates/kreuzberg-layout/: Cargo.toml
crates/kreuzberg-layout/src/: engine.rs  lib.rs  model_manager.rs  session.rs  types.rs
crates/kreuzberg-layout/src/models/: mod.rs  rtdetr.rs  yolo.rs
crates/kreuzberg-layout/src/postprocessing/: nms.rs
crates/kreuzberg-layout/tests/: docling_inference.rs  engine_smoke.rs
crates/kreuzberg-node/: README.md  package.json
crates/kreuzberg-php/: Cargo.toml
crates/kreuzberg-py/: Cargo.toml
crates/kreuzberg-tesseract/: Cargo.toml  build.rs
crates/kreuzberg-wasm/: Cargo.toml  README.md  package.json  tsconfig.json
docker/: Dockerfile.core  Dockerfile.full  Dockerfile.musl-build  Dockerfile.musl-ffi  Dockerfile.musl-rustler
docs/: features.md
docs/api-reference/: types.md
docs/cli/: usage.md
docs/concepts/: plugin-system.md
examples/: kreuzberg.toml
kreuzberg/: _types.py
scripts/: readme_config.yaml  sync_versions.py
(+514 files in other folders)
