[package]
name = "kreuzberg-docling-layout"
version.workspace = true
edition = "2024"
rust-version.workspace = true
authors.workspace = true
description = "Docling layout detection via ONNX Runtime for Kreuzberg"
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"
keywords = ["layout", "detection", "onnx", "document", "docling"]
categories = ["computer-vision", "text-processing"]
exclude = ["tests/*"]

[lib]
name = "kreuzberg_docling_layout"
crate-type = ["lib"]

[dependencies]
thiserror = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
ndarray = "0.17"
num_cpus = { workspace = true }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray"] }

[dev-dependencies]
hf-hub = "0.4"

[features]
default = ["load-dynamic"]
load-dynamic = ["ort/load-dynamic"]
