[package]
name = "kreuzberg-layout"
version.workspace = true
edition = "2024"
rust-version.workspace = true
authors.workspace = true
description = "Document layout detection via ONNX Runtime for Kreuzberg"
license.workspace = true
repository.workspace = true
homepage = "https://kreuzberg.dev"
keywords = ["layout", "detection", "onnx", "document", "yolo"]
categories = ["computer-vision", "text-processing"]

[lib]
name = "kreuzberg_layout"
crate-type = ["lib"]

[dependencies]
thiserror = { workspace = true }
image = { workspace = true, features = ["png", "jpeg"] }
ndarray = "0.17"
num_cpus = { workspace = true }
ort = { version = "2.0.0-rc.11", default-features = false, features = ["ndarray"] }
serde = { workspace = true }
tracing = { workspace = true }
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
sha2 = "0.10"
hex = { workspace = true }

[features]
default = ["load-dynamic"]
load-dynamic = ["ort/load-dynamic"]
